# spamclas

./: Cargo.toml  README  detect_spam.py
src/: main.rs
