[package]
name = "spamclas"
version = "0.1.0"
authors = ["sproxet <sproxet@signaleleven.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = {version="0.14.4", features=["auto-initialize"]}
telegram-bot = { git="https://github.com/telegram-rs/telegram-bot.git", branch="main" }
crossbeam-channel = "0.5.1"
tokio = {version="1", features=["rt-multi-thread", "macros"]}
futures = "*"
tracing = "*"
tracing-subscriber = "*"